<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="notification_action">Download Image</string>
    <string name="download_image">Download Image</string>
    <string name="download_title_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_title_load_app">LoadApp - Current repository by Udacity</string>
    <string name="download_title_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="radio_not_selected">Please select the file to download</string>
    <string name="detail_file_name_label">File name:</string>
    <string name="detail_status_label">Status:</string>
</resources>
