<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/img_download"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/download_image"
        android:src="@drawable/ic_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_download"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/glideItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:text="@string/download_title_glide" />

        <RadioButton
            android:id="@+id/loadAppItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:text="@string/download_title_load_app" />

        <RadioButton
            android:id="@+id/retrofitItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:text="@string/download_title_retrofit" />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_btn_height"
        android:layout_margin="@dimen/custom_btn_margin"
        android:background="@color/design_default_color_on_primary"
        app:btnColor="@color/colorPrimary"
        app:btnLoadingColor="@color/colorPrimaryDark"
        app:btnText="@string/button_name"
        app:btnTextColor="@color/white"
        app:btnTextLoading="@string/button_loading"
        app:btnTextLoadingColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>